--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -717,6 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Descripción variable categóricas vs variable dependiente\n",
     "* **Género vs Segmentación**\n",
     "\n",
     "   Con respecto a la distribución del género por Segmentación, la participación en todos los grupos de ambos géneros es similar a excepción del grupo D, donde la participación de los hombres es casi del 60%.\n",
